# CCounter

./: .gitignore  CMakeLists.txt  counter.c  counter.h  file_util.c  file_util.h  index.json  inverted_index.txt  main.c  str.c  str.h
c_lion/: CMakeLists.txt  counter.c  counter.h  main.c  str.c  str.h
jim/: jim.h  jim2.h
songs/: Niggas In Paris.txt
